react-argocd-ci-cd/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: YOUR_DOCKERHUB_USERNAME/react-app:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
